# dig-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: full-stack-ci  full-stack-ci.yaml  full-stack-ci.yml  github-comment  github-comment.yaml  github-comment.yml
crates/: .env  Cargo.toml  Dockerfile
crates/access_control/: Cargo.toml
crates/access_control/src/dto/: mod.rs  policy.rs
crates/api_server/: Cargo.toml  Dockerfile
crates/api_server/config/: default.toml
crates/api_server/did_library/resources/: did_registry.json
crates/api_server/src/: api.rs  main.rs
crates/api_server/src/api/: did_controller.rs
crates/api_server/src/dto/: error.rs  request.rs  response.rs
crates/did_library/: Cargo.toml  build.rs  tauri.conf.json
crates/did_library/did_library/resources/: did_registry.json
crates/did_library/resources/: .gitignore
crates/did_library/src/: did.rs  lib.rs  main.rs  mapping.rs
crates/did_library/src/did/: core.rs  methods.rs  registry.rs
crates/did_library/src/did/core/: did_document.rs  key_utils.rs  traits.rs
crates/did_library/src/did/methods/ethr/: handler.rs
crates/did_library/src/did/methods/key/: handler.rs
crates/did_library/src/did/methods/web/: handler.rs
crates/did_library/src/did/registry/: did_storage.rs
crates/did_library/src/dto/: document.rs
crates/did_library/src/mapping/: document_mapper.rs
crates/did_library/srcc/: main.js
crates/did_library/tests/: lib.rs
crates/did_library/tests/unit/: ethr_handler.rs  mod.rs
crates/identity_wallet/: Cargo.toml
crates/identity_wallet/src/: block.rs  hashable.rs  lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/dto/: mod.rs
crates/verifiable_credentials/: Cargo.toml  src.rs
crates/verifiable_credentials/src/: api.rs  build.rs  format.rs  keys.rs  lib.rs  module.rs  presentation.rs  verifier.rs
crates/verifiable_credentials/src/dto/: credential.rs  mod.rs
crates/verifiable_credentials/tests/: dto_tests.rs  format_tests.rs  integration_tests.rs  keys_tests.rs  presentation_tests.rs
decentralized-identity-mvp/: package-lock.json
decentralized-identity-mvp/src/: App.css  App.js  index.css
frontend/web_app/: .env  Dockerfile  package-lock.json  package.json
frontend/web_app/src/: App.js  CreateDidReq.ipynb  did.ts
frontend/web_app/src/components/: AppUI.css  AppUI.jsx
frontend/web_app/src/config/: api.js
frontend/web_app/src/dto/request/: CreateDidReq.ts
frontend/web_app/src/dto/response/: CreateDidResp.ts
frontend/web_app/src/http/: httpRequestHandler.ts
src/: block.rs  lib.rs  main.rs
