[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
verifiable_credentials = { path = "../verifiable_credentials" }
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
# New dependencies for configuration management
dotenv = "0.15.0"  # For loading .env files
config = "0.13.1"  # For more advanced configuration management