[package]
name = "did_library"
version = "0.1.0"
authors = ["Kia Karimi <kiakarimi82@gmail.com>", "Alireza Kondori <alirezako82@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
ssi = "=0.10.2"
chrono = "0.4.40"
indexmap = "2.2.0"  # Use the latest version


[lib]
name = "did_library"
path = "src/lib.rs"
