[package]
name = "did_library"
version = "0.1.0"
authors = ["Kia Karimi <kiakarimi82@gmail.com>", "Alireza Kondori <alirezako82@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], default-features = false }
shared = { path = "../shared", default-features = false }
serde_json = { version = "1.0.140", default_features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.40", default-features = false }
indexmap = { version = "2.2.0", default-features = false }
bs58 = { version = "0.5", default-features = false }
ssi-jwk = { version = "0.3.2", default-features = false }
ethereum-types = { version = "0.15.1", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }
hex = { version = "0.4", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[lib]
name = "did_lib_app"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
mobile = []
