[package]
name = "verifiable_credentials"
version = "0.1.0"
authors = ["Kia Karimi <kiakarimi82@gmail.com>", "Alireza Kondori <alirezako82@gmail.com>"]
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
# Cryptography dependencies - specific versions for compatibility
ed25519-dalek = "1.0.1"  
rand = "0.7.3"           # Must match what ed25519-dalek expects
base64 = "0.13.0"
sha2 = "0.9.8"

[lib]
path = "src/lib.rs"