[package]
name = "verifiable_credentials"
version = "0.1.0"
authors = ["Kia Karimi <kiakarimi82@gmail.com>", "Alireza Kondori <alirezako82@gmail.com>"]
edition = "2021"
build = "src/build.rs"

[dependencies]

did_library = { path = "../did_library" }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", default-features = false }
uuid = { version = "1.0.1", features = ["v4", "serde"], default-features = false }
# Cryptography dependencies - specific versions for compatibility
ed25519-dalek = "1.0.1"  
rand = { version = "0.7.3", default-features = false }
base64 = { version = "0.13.0", default-features = false }
sha2 = { version = "0.9.8", default-features = false }

# For date/time testing
chrono = { version = "0.4.40", features = ["serde"], default-features = false }

# For async testing if needed
tokio-test = { version = "0.4", default-features = false }

[lib]
path = "src/lib.rs"

# Test configuration
[[test]]
name = "dto_tests"
path = "tests/dto_tests.rs"

[[test]]
name = "keys_tests"
path = "tests/keys_tests.rs"

[[test]]
name = "format_tests"
path = "tests/format_tests.rs"

[[test]]
name = "presentation_tests"
path = "tests/presentation_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"